--- a/index.html
+++ b/index.html
@@ -3,22 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&display=swap" rel="stylesheet">
   <title>แบบฟอร์มขอลางาน</title>
-  
-  <style>
-    body { margin: 16px }
-    button, img { display: none; width: 40% }
-    button { padding: 16px }
-  </style>
-  
+
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+
 </head>
 <body>
-  <h1>Page 1</h1>
-  <img id="pictureUrl">
-  <p id="userId"><b>userId : </b></p>
-  <button id="btnLogIn" onclick="logIn()">Log In</button>
-  <button id="btnLogOut" onclick="logOut()">Log Out</button>
+    <div class="container">
+      <h2>แบบฟอร์มขอลางาน</h2>
+
+        <p id="userId" name="userId"><b>userId : </b></p>
+
+        <label>ชื่อ-สกุล</label>
+        <input type="text" name="name" id="name" required>
+
+        <label>ประเภทการลา</label>
+        <select name="type" id="type">
+          <option value="ลากิจ">ลากิจ</option>
+          <option value="ลาป่วย">ลาป่วย</option>
+        </select>
+
+        <label>รูปแบบวันลา</label>
+        <select name="pattern" id="pattern" required>
+          <option value="ลาเต็มวัน">ลาเต็มวัน</option>
+          <option value="ลาครึ่งวันเช้า">ลาครึ่งวันเช้า</option>
+          <option value="ลาครึ่งวันบ่าย">ลาครึ่งวันบ่าย</option>
+        </select>
+        
+        <label>เริ่มลา</label>
+        <input type="date" class="date-input" data-placeholder="" name="start_date" id="start_date" required />
+
+        <label>สิ้นสุด</label>
+        <input type="date" class="date-input" data-placeholder="" name="end_date" id="end_date" required />
+
+        <label>จำนวนวัน</label>
+        <input type="number" name="count_day" id="count_day" min="1" required />
+
+        <label>หมายเหตุ</label>
+        <textarea name="note" id="note"></textarea>
+
+      <button type="submit">ส่งคำขอ</button>
+      </div>
+  </div>
 
 
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
