--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <h2>แบบฟอร์มขอลางาน</h2>
 
-        <p id="userId" name="userId"><b>userId : </b></p>
+        <p id="userId" ><b>userId : </b></p>
 
         <label>ชื่อ-สกุล</label>
         <input type="text" name="name" id="name" required>
@@ -46,7 +46,6 @@
       <button type="submit">ส่งคำขอ</button>
       </div>
   </div>
-
 
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script>
