--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="container">
       <h2>แบบฟอร์มขอลางาน</h2>
         <p id="userId"><b>userId : </b></p>
+        <input type="hidden" id="uid">
 
         <label>ชื่อ-สกุล</label>
         <input type="text" name="name" id="name" required />
@@ -46,73 +47,74 @@
         <button onclick="submitForm()">ส่งคำขอ</button>
     </div>
 
-     <script type="module">
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
-      import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-analytics.js";
- 
-      const firebaseConfig = {
-        apiKey: "AIzaSyC1qq59U0moH20dOCpAITNFR9ttHLxTRFg",
-        authDomain: "pt-test-b0dc9.firebaseapp.com",
-        projectId: "pt-test-b0dc9",
-        storageBucket: "pt-test-b0dc9.firebasestorage.app",
-        messagingSenderId: "1938984234",
-        appId: "1:1938984234:web:89078e2d16c3958cc6a253",
-        measurementId: "G-F2KV6LY4XE"
-      };
-      const app = initializeApp(firebaseConfig);
-      const analytics = getAnalytics(app);
+   <script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-analytics.js";
 
-      async function main() {
-        await liff.init({ liffId: "2008650824-wo3yRXa9" });
-        if (liff.isLoggedIn()) {
-          getUserProfile();
-        } else {
-          liff.login();
-        }
-      }
-      main();
+  // ★★ Firestore ★★
+  import { 
+    getFirestore, 
+    collection, 
+    addDoc 
+  } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
 
+  const firebaseConfig = {
+    apiKey: "AIzaSyC1qq59U0moH20dOCpAITNFR9ttHLxTRFg",
+    authDomain: "pt-test-b0dc9.firebaseapp.com",
+    projectId: "pt-test-b0dc9",
+    storageBucket: "pt-test-b0dc9.firebasestorage.app",
+    messagingSenderId: "1938984234",
+    appId: "1:1938984234:web:89078e2d16c3958cc6a253",
+    measurementId: "G-F2KV6LY4XE"
+  };
 
-      async function getUserProfile() {
-        const profile = await liff.getProfile();
-        document.getElementById("userId").append(profile.userId);
-        document.getElementById("uid").value = profile.userId;
-      }
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+  const db = getFirestore(app);   // ← ต้องมี
 
+  // ====== LIFF ======
+  async function main() {
+    await liff.init({ liffId: "2008650824-wo3yRXa9" });
+    if (liff.isLoggedIn()) {
+      getUserProfile();
+    } else {
+      liff.login();
+    }
+  }
+  main();
 
-      async function saveToFirestore() {
-        const name = document.getElementById("name").value;
-        const type = document.getElementById("type").value;
-        const pattern = document.getElementById("pattern").value;
-        const start_date = document.getElementById("start_date").value;
-        const end_date = document.getElementById("end_date").value;
-        const count_day = document.getElementById("count_day").value;
-        const note = document.getElementById("note").value;
-        const userId = document.getElementById("uid").value;
+  async function getUserProfile() {
+    const profile = await liff.getProfile();
+    document.getElementById("userId").append(profile.userId);
+    document.getElementById("uid").value = profile.userId;
+  }
 
-        try {
-          await addDoc(collection(db, "leave_form"), {
-            userId,
-            name,
-            type,
-            pattern,
-            start_date,
-            end_date,
-            count_day,
-            note,
-            timestamp: new Date()
-          });
+  // ====== บันทึกลง Firestore ======
+  async function saveToFirestore() {
+    const data = {
+      userId: document.getElementById("uid").value,
+      name: document.getElementById("name").value,
+      type: document.getElementById("type").value,
+      pattern: document.getElementById("pattern").value,
+      start_date: document.getElementById("start_date").value,
+      end_date: document.getElementById("end_date").value,
+      count_day: document.getElementById("count_day").value,
+      note: document.getElementById("note").value,
+      timestamp: new Date(),
+    };
 
-          alert("ส่งคำขอสำเร็จ 👍");
-        } catch (e) {
-          console.error("Error adding document: ", e);
-          alert("เกิดข้อผิดพลาดในการบันทึกข้อมูล");
-        }
-      }
+    try {
+      await addDoc(collection(db, "leave_form"), data);
+      alert("ส่งคำขอสำเร็จ 👍");
+    } catch (e) {
+      console.error("Error adding document: ", e);
+      alert("เกิดข้อผิดพลาดในการบันทึกข้อมูล");
+    }
+  }
 
-      window.submitForm = function () {
-        saveToFirestore();
-      };
-    </script>
+  window.submitForm = function () {
+    saveToFirestore();
+  };
+</script>
   </body>
 </html>
