--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <h2>แบบฟอร์มขอลางาน</h2>
 
-        <input type="hidden" id="userId">
+        <p id="userId"><b>userId : </b></p>
 
         <label>ชื่อ-สกุล</label>
         <input type="text" name="name" id="name" required />
