--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link href="/component/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 
   </head>
   <body>
     <div class="container">
       <h2>แบบฟอร์มขอลางาน</h2>
-
+      
         <p id="userId"><b>userId : </b></p>
+        <input type="hidden" id="uid">
 
         <label>ชื่อ-สกุล</label>
         <input type="text" name="name" id="name" required />
@@ -46,7 +47,7 @@
 
         <button onclick="submitForm()">ส่งคำขอ</button>
     </div>
-
+    
     <script type="module" src="/script/savedata.js"></script>
   </body>
 </html>
