--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="/component/style.css" rel="stylesheet">
 
   </head>
   <body>
     <div class="container">
       <h2>แบบฟอร์มขอลางาน</h2>
-      
+
         <p id="userId"><b>userId : </b></p>
         <input type="hidden" id="uid">
 
