--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="container">
       <h2>แบบฟอร์มขอลางาน</h2>
 
-        <p id="userId"><b>userId : </b></p>
+        <!-- <p id="userId"><b>userId : </b></p> -->
+        <input type="hidden" id="uid" value="U9e8d123456789">
 
         <label>ชื่อ-สกุล</label>
         <input type="text" name="name" id="name" required />
