--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link href="/component/style.css" rel="stylesheet">
+    <link href="/component/" rel="stylesheet">
 
   </head>
   <body>
@@ -15,7 +15,7 @@
       <h2>แบบฟอร์มขอลางาน</h2>
 
         <!-- <p id="userId"><b>userId : </b></p> -->
-        <input type="hidden" id="uid" value="U9e8d123456789">
+        <input type="hidden" id="uid">
 
         <label>ชื่อ-สกุล</label>
         <input type="text" name="name" id="name" required />
