--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input type="text" name="name" id="name" required />
 
             <label>ประเภทการลา</label>
-            <select name="type" id="type">
+            <select name="type" id="type" required>
             <option value="ลากิจ">ลากิจ</option>
             <option value="ลาป่วย">ลาป่วย</option>
             </select>
